cleanup npm scripts

--- a/package.json
+++ b/package.json
@@ -21,24 +21,19 @@
   },
   "scripts": {
     "__Public Scripts__": "",
-    "dev": "concurrently -n tailwind,oxide-node -c green,yellow 'npm run stable:build -- --watch' 'npm run --prefix ./oxide dev:node'",
-    "build": "npm run --prefix ./oxide build:node && npm run stable:build",
+    "dev": "concurrently -n tailwind,oxide-node -c green,yellow 'npm run dev:js' 'npm run dev:rust'",
+    "build": "npm run build:rust && npm run build:js && npm run build:peers",
     "test": "jest",
     "style": "eslint .",
     "__Private Scripts__": "",
-    "pretest": "npm run generate",
-    "rebuild-fixtures": "npm run build && node -r @swc/register scripts/rebuildFixtures.js",
-    "test:integrations": "npm run test --prefix ./integrations",
-    "install:integrations": "node scripts/install-integrations.js",
+    "dev:rust": "npm run --prefix ./oxide dev:node",
+    "dev:js": "npm run build:js -- --watch",
+    "build:rust": "npm run --prefix ./oxide build:node",
+    "build:js": "npm run generate:plugin-list && swc src --out-dir lib --copy-files --delete-dir-on-start",
+    "build:peers": "esbuild lib/cli-peer-dependencies.js --bundle --platform=node --outfile=peers/index.js --define:process.env.CSS_TRANSFORMER_WASM=false",
     "generate:plugin-list": "node -r @swc/register scripts/create-plugin-list.js",
     "generate:types": "node -r @swc/register scripts/generate-types.js",
-    "generate": "npm run generate:plugin-list && npm run generate:types",
-    "release-channel": "node ./scripts/release-channel.js",
-    "release-notes": "node ./scripts/release-notes.js",
-    "prestable:build": "npm run generate && rimraf lib",
-    "stable:build": "swc src --out-dir lib --copy-files",
-    "poststable:build": "esbuild lib/cli-peer-dependencies.js --bundle --platform=node --outfile=peers/index.js --define:process.env.CSS_TRANSFORMER_WASM=false",
-    "prepublishOnly": "npm install --force && npm run build"
+    "prepublishOnly": "npm install --force && npm run build && npm run generate:types"
   },
   "files": [
     "src/*",
