play with turbo configuration

--- a/turbo.json
+++ b/turbo.json
@@ -2,18 +2,29 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "//#build": {
-      "outputs": ["lib/**", "peers/**", "types/generated/**"]
+      "outputs": ["lib/**", "peers/**", "types/generated/**"],
+      "inputs": ["src/**", "oxide/**", "nesting/**", "oxide-node-api-shim/**", "types/**"]
     },
     "test": {
       "env": ["OXIDE"],
+      "dependsOn": ["//#build"],
       "outputs": []
     },
     "//#test": {
       "env": ["OXIDE"],
-      "outputs": []
+      "dependsOn": ["//#build"],
+      "outputs": [],
+      "inputs": [
+        "tests/**",
+        "src/**",
+        "oxide/**",
+        "nesting/**",
+        "oxide-node-api-shim/**",
+        "types/**"
+      ]
     },
     "//#style": {
-      "outputs": []
+      "outputs": ["**/*.js", "**/*.ts"]
     }
   }
 }
