remove unnecessary inputs
Inputs are implicit via the `"dependsOn": ["//#build"],`

--- a/turbo.json
+++ b/turbo.json
@@ -14,14 +14,7 @@
       "env": ["OXIDE"],
       "dependsOn": ["//#build"],
       "outputs": [],
-      "inputs": [
-        "tests/**",
-        "src/**",
-        "oxide/**",
-        "nesting/**",
-        "oxide-node-api-shim/**",
-        "types/**"
-      ]
+      "inputs": ["tests/**"]
     },
     "//#style": {
       "outputs": ["**/*.js", "**/*.ts"]
