use `inputs` instead of `outputs` for `//#style`

--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,7 @@
       "inputs": ["tests/**"]
     },
     "//#style": {
-      "outputs": ["**/*.js", "**/*.ts"]
+      "inputs": ["**/*.js", "**/*.ts"]
     }
   }
 }
