--- a/package.json
+++ b/package.json
@@ -75,12 +75,13 @@
     "browserslist": "^4.21.5",
     "chokidar": "^3.5.3",
     "color-name": "^1.1.4",
-    "detective": "^5.2.1",
+    "detective-typescript": "^9.0.0",
     "didyoumean": "^1.2.2",
     "dlv": "^1.1.3",
     "fast-glob": "^3.2.12",
     "glob-parent": "^6.0.2",
     "is-glob": "^4.0.3",
+    "jiti": "^1.17.2",
     "lightningcss": "^1.18.0",
     "lilconfig": "^2.1.0",
     "micromatch": "^4.0.5",
