--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "postcss-selector-parser": "^6.0.11",
     "postcss-value-parser": "^4.2.0",
     "quick-lru": "^5.1.1",
-    "resolve": "^1.22.1"
+    "resolve": "^1.22.1",
+    "sucrase": "^3.29.0"
   },
   "browserslist": [
     "> 1%",
