ensure we publish the correct stub files

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lib/*",
     "peers/*",
     "scripts/*.js",
-    "stubs/*.stub.js",
+    "stubs/*.{js,ts,cjs}",
     "nesting/*",
     "types/**/*",
     "*.d.ts",
