--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "jest-diff": "^29.5.0",
-    "lightningcss": "^1.20.0",
+    "lightningcss": "1.18.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
     "source-map-js": "^1.0.2",
