--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     "tailwind": "lib/cli.js",
     "tailwindcss": "lib/cli.js"
   },
+  "workspaces": [
+    "integrations/*",
+    "oxide/crates/node"
+  ],
   "tailwindcss": {
-    "engine": "stable"
+    "engine": "oxide"
   },
   "scripts": {
-    "prebuild": "npm run generate && rimraf lib",
-    "build": "swc src --out-dir lib --copy-files --config jsc.transform.optimizer.globals.vars.__OXIDE__='\"false\"'",
-    "postbuild": "esbuild lib/cli-peer-dependencies.js --bundle --platform=node --outfile=peers/index.js --define:process.env.CSS_TRANSFORMER_WASM=false",
-    "rebuild-fixtures": "npm run build && node -r @swc/register scripts/rebuildFixtures.js",
-    "style": "eslint .",
-    "pretest": "npm run generate",
+    "dev": "concurrently -n tailwind,oxide-node -c green,yellow 'npm run dev:js' 'npm run dev:rust'",
+    "build": "npm run build:rust && npm run build:js && npm run build:peers",
     "test": "jest",
-    "test:integrations": "npm run test --prefix ./integrations",
-    "install:integrations": "node scripts/install-integrations.js",
+    "test:integrations": "npm run test -w ./integrations",
+    "style": "eslint .",
+    "prepublishOnly": "npm install --force && npm run build && npm run generate:types",
+    "dev:rust": "npm run --prefix ./oxide dev:node",
+    "dev:js": "npm run build:js -- --watch",
+    "build:rust": "npm run --prefix ./oxide build:node",
+    "build:js": "npm run generate:plugin-list && swc src --out-dir lib --copy-files --delete-dir-on-start --config jsc.transform.optimizer.globals.vars.__OXIDE__='\"true\"'",
+    "build:peers": "esbuild lib/cli-peer-dependencies.js --bundle --platform=node --outfile=peers/index.js --define:process.env.CSS_TRANSFORMER_WASM=false",
     "generate:plugin-list": "node -r @swc/register scripts/create-plugin-list.js",
-    "generate:types": "node -r @swc/register scripts/generate-types.js",
-    "generate": "npm run generate:plugin-list && npm run generate:types",
-    "release-channel": "node ./scripts/release-channel.js",
-    "release-notes": "node ./scripts/release-notes.js",
-    "prepublishOnly": "npm install --force && npm run build"
+    "generate:types": "node -r @swc/register scripts/generate-types.js"
   },
   "files": [
     "src/*",
@@ -46,28 +48,31 @@
     "*.js"
   ],
   "devDependencies": {
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.55",
-    "@swc/jest": "^0.2.26",
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.41",
+    "@swc/jest": "0.2.24",
     "@swc/register": "0.1.10",
     "autoprefixer": "^10.4.14",
-    "browserslist": "^4.21.5",
-    "concurrently": "^8.0.1",
-    "cssnano": "^6.0.0",
-    "esbuild": "^0.17.18",
-    "eslint": "^8.39.0",
+    "concurrently": "^7.5.0",
+    "cssnano": "^5.1.15",
+    "esbuild": "^0.17.12",
+    "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "jest-diff": "^29.5.0",
-    "lightningcss": "1.18.0",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.0",
+    "prettier": "^2.8.7",
+    "rimraf": "^4.4.0",
     "source-map-js": "^1.0.2",
-    "turbo": "^1.9.3"
+    "turbo": "^1.8.3"
+  },
+  "peerDependencies": {
+    "postcss": "^8.0.9"
   },
   "dependencies": {
+    "@tailwindcss/oxide": "file:oxide/crates/node",
     "arg": "^5.0.2",
+    "browserslist": "^4.21.5",
     "chokidar": "^3.5.3",
     "color-name": "^1.1.4",
     "didyoumean": "^1.2.2",
@@ -75,22 +80,23 @@
     "fast-glob": "^3.2.12",
     "glob-parent": "^6.0.2",
     "is-glob": "^4.0.3",
-    "jiti": "^1.18.2",
+    "jiti": "^1.17.2",
+    "lightningcss": "^1.18.0",
     "lilconfig": "^2.1.0",
     "micromatch": "^4.0.5",
     "normalize-path": "^3.0.0",
     "object-hash": "^3.0.0",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.23",
-    "postcss-import": "^15.1.0",
+    "postcss": "^8.4.21",
+    "postcss-import": "^14.1.0",
     "postcss-js": "^4.0.1",
     "postcss-load-config": "^4.0.1",
-    "postcss-nested": "^6.0.1",
+    "postcss-nested": "6.0.1",
     "postcss-selector-parser": "^6.0.11",
     "postcss-value-parser": "^4.2.0",
     "quick-lru": "^5.1.1",
-    "resolve": "^1.22.2",
-    "sucrase": "^3.32.0"
+    "resolve": "^1.22.1",
+    "sucrase": "^3.31.0"
   },
   "browserslist": [
     "> 1%",
@@ -100,6 +106,7 @@
   ],
   "jest": {
     "testTimeout": 30000,
+    "globalSetup": "<rootDir>/jest/global-setup.js",
     "setupFilesAfterEnv": [
       "<rootDir>/jest/customMatchers.js"
     ],
@@ -109,15 +116,12 @@
       "/standalone-cli/",
       "\\.test\\.skip\\.js$"
     ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!lightningcss)"
-    ],
     "transform": {
       "\\.js$": "@swc/jest",
       "\\.ts$": "@swc/jest"
     }
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   }
 }
