--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "turbo": "^1.9.3"
   },
   "dependencies": {
+    "@alloc/quick-lru": "^5.2.0",
     "@tailwindcss/oxide": "file:oxide/crates/node",
     "arg": "^5.0.2",
     "browserslist": "^4.21.5",
@@ -90,7 +91,6 @@
     "postcss-nested": "^6.0.1",
     "postcss-selector-parser": "^6.0.11",
     "postcss-value-parser": "^4.2.0",
-    "quick-lru": "^5.1.1",
     "resolve": "^1.22.2",
     "sucrase": "^3.32.0"
   },
