--- a/oxide/crates/core/Cargo.toml
+++ b/oxide/crates/core/Cargo.toml
@@ -17,6 +17,7 @@ ignore = "0.4.20"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ['html_reports'] }
+tempfile = "3.5.0"
 
 [[bench]]
 name = "parse_candidates"
