--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "dev": "concurrently -n tailwind,oxide-node -c green,yellow 'npm run dev:js' 'npm run dev:rust'",
-    "build": "npm run build:rust && npm run build:js && npm run build:peers",
+    "build": "npm run build:rust && npm run build:js",
     "test": "jest",
     "test:integrations": "npm run test -w ./integrations",
     "style": "eslint .",
@@ -30,7 +30,6 @@
     "dev:js": "npm run build:js -- --watch",
     "build:rust": "npm run --prefix ./oxide build:node",
     "build:js": "npm run generate:plugin-list && swc src --out-dir lib --copy-files --delete-dir-on-start --config jsc.transform.optimizer.globals.vars.__OXIDE__='\"true\"'",
-    "build:peers": "esbuild lib/cli-peer-dependencies.js --bundle --platform=node --outfile=peers/index.js --define:process.env.CSS_TRANSFORMER_WASM=false",
     "generate:plugin-list": "node -r @swc/register scripts/create-plugin-list.js",
     "generate:types": "node -r @swc/register scripts/generate-types.js"
   },
@@ -38,7 +37,6 @@
     "src/*",
     "cli/*",
     "lib/*",
-    "peers/*",
     "scripts/*.js",
     "stubs/*",
     "nesting/*",
