--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -1,4 +1,4 @@
-name: Release Insiders — Oxide
+name: Release Insiders
 
 on:
   push:
@@ -8,7 +8,7 @@ env:
   APP_NAME: tailwindcss-oxide
   NODE_VERSION: 16
   OXIDE_LOCATION: ./oxide/crates/node
-  RELEASE_CHANNEL: oxide-insiders
+  RELEASE_CHANNEL: insiders
 
 jobs:
   build:
