drop 3.3 branch from integration tests

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -2,9 +2,9 @@ name: Integration Tests
 
 on:
   push:
-    branches: [master, 3.3]
+    branches: [master]
   pull_request:
-    branches: [master, 3.3]
+    branches: [master]
 
 permissions:
   contents: read
