--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -353,7 +353,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  tailwind_oxide_release:
+  tailwind-release:
     runs-on: ubuntu-latest
     name: Build and release Tailwind CSS
 
