ensure we install Rust

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,15 +58,22 @@ jobs:
             ./oxide/crates/node/index.d.ts
           key: ${{ runner.os }}-oxide-${{ hashFiles('./oxide/crates/**/*') }}
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
       - name: Check versions
         run: |
           echo "Node:" `node --version`
           echo "NPM:" `npm --version`
           echo "Rust:" `rustc --version`
           echo "Cargo:" `cargo --version`
-
-      - name: Install dependencies
-        run: npm install
 
       - name: Build Tailwind CSS
         run: npx turbo run build --filter=//
