--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "dependencies": {
     "@alloc/quick-lru": "^5.2.0",
-    "@tailwindcss/oxide": "file:oxide/crates/node",
+    "@tailwindcss/oxide": "0.0.0-insiders.776d5bf",
     "arg": "^5.0.2",
     "browserslist": "^4.21.7",
     "chokidar": "^3.5.3",
