fix: prevent long unwanted runs!

--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -26,6 +26,7 @@ jobs:
 
     name: Build ${{ matrix.target }} (OXIDE)
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v3
 
