--- a/.github/workflows/release-oxide.yml
+++ b/.github/workflows/release-oxide.yml
@@ -24,6 +24,7 @@ jobs:
 
     name: Build ${{ matrix.target }} (OXIDE)
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v3
 
@@ -75,6 +76,7 @@ jobs:
   oxide-build-apple-silicon:
     name: Build Apple Silicon (OXIDE)
     runs-on: macos-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v3
 
@@ -156,6 +158,7 @@ jobs:
 
     name: Build ${{ matrix.target }} (OXIDE)
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     container:
       image: ${{ matrix.image }}
 
@@ -213,6 +216,7 @@ jobs:
 
   oxide-release:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     name: Build and release
     needs:
       - oxide-build
@@ -285,6 +289,7 @@ jobs:
 
   tailwind_oxide_release:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     name: Build and release Tailwind CSS
 
     needs:
