--- a/.github/workflows/ci-stable.yml
+++ b/.github/workflows/ci-stable.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [master]
   pull_request:
-    branches: [master, 3.3]
+    branches: [master, 3.3, 3.4]
 
 permissions:
   contents: read
