run CI on `master` and `next` branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [master, next]
   pull_request:
-    branches: [main]
+    branches: [master]
 
 permissions:
   contents: read
