--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [master, next]
   pull_request:
-    branches: [master]
+    branches: [master, next]
 
 permissions:
   contents: read
