use `oxide` tag instead of `internal` tag by default
This will allow us to install `tailwindcss@oxide`

--- a/.github/workflows/release-oxide.yml
+++ b/.github/workflows/release-oxide.yml
@@ -6,7 +6,7 @@ on:
       release_channel:
         description: 'Release channel'
         required: false
-        default: 'internal'
+        default: 'oxide'
         type: string
 
 permissions:
