--- a/oxide/crates/node/npm/freebsd-x64/package.json
+++ b/oxide/crates/node/npm/freebsd-x64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tailwindcss/oxide-freebsd-x64",
-  "version": "0.0.0-oxide.4",
+  "version": "4.0.0-alpha.1",
   "os": [
     "freebsd"
   ],
