--- a/oxide/crates/node/npm/linux-arm-gnueabihf/package.json
+++ b/oxide/crates/node/npm/linux-arm-gnueabihf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tailwindcss/oxide-linux-arm-gnueabihf",
-  "version": "0.0.0-oxide.4",
+  "version": "4.0.0-alpha.1",
   "os": [
     "linux"
   ],
