--- a/oxide/crates/node/npm/win32-x64-msvc/package.json
+++ b/oxide/crates/node/npm/win32-x64-msvc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tailwindcss/oxide-win32-x64-msvc",
-  "version": "0.0.0-oxide.4",
+  "version": "4.0.0-alpha.1",
   "os": [
     "win32"
   ],
