--- a/oxide/crates/node/package.json
+++ b/oxide/crates/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tailwindcss/oxide",
-  "version": "0.0.0-oxide.4",
+  "version": "4.0.0-alpha.1",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
