--- a/packages/@tailwindcss-postcss/package.json
+++ b/packages/@tailwindcss-postcss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tailwindcss/postcss",
-  "version": "0.0.0-oxide.4",
+  "version": "4.0.0-alpha.1",
   "description": "PostCSS plugin for Tailwind CSS, a utility-first CSS framework for rapidly building custom user interfaces",
   "license": "MIT",
   "repository": "https://github.com/tailwindlabs/tailwindcss.git",
