--- a/packages/@tailwindcss-vite/package.json
+++ b/packages/@tailwindcss-vite/package.json
@@ -7,7 +7,7 @@
   "bugs": "https://github.com/tailwindlabs/tailwindcss/issues",
   "homepage": "https://tailwindcss.com",
   "scripts": {
-    "build": "tsup-node ./src/index.ts --format esm --dts --minify",
+    "build": "tsup-node ./src/index.ts --format esm --dts --minify --clean",
     "dev": "pnpm run build -- --watch"
   },
   "files": [
