--- a/oxide/crates/node/npm/darwin-x64/package.json
+++ b/oxide/crates/node/npm/darwin-x64/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@tailwindcss/oxide-darwin-x64",
   "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tailwindlabs/tailwindcss.git",
+    "directory": "oxide/crates/node/npm/darwin-x64"
+  },
   "os": [
     "darwin"
   ],
