Add provenance to all packages
Based on #13097 by @saibotk

Add [provenance](https://docs.npmjs.com/generating-provenance-statements) for all published packages.

---
Co-authored-by: saibotk <git@saibotk.de>

--- a/.github/workflows/release-oxide.yml
+++ b/.github/workflows/release-oxide.yml
@@ -150,6 +150,10 @@ jobs:
     timeout-minutes: 15
     name: Build and release Tailwind CSS
 
+    permissions:
+      contents: read
+      id-token: write
+
     needs:
       - build
 
