--- a/oxide/crates/node/npm/android-arm64/package.json
+++ b/oxide/crates/node/npm/android-arm64/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@tailwindcss/oxide-android-arm64",
-  "version": "4.0.0-alpha.3",
+  "version": "4.0.0-alpha.6",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tailwindlabs/tailwindcss.git",
+    "directory": "oxide/crates/node/npm/android-arm64"
+  },
   "os": [
     "android"
   ],
@@ -11,6 +16,9 @@
   "files": [
     "tailwindcss-oxide.android-arm64.node"
   ],
+  "publishConfig": {
+    "provenance": true
+  },
   "license": "MIT",
   "engines": {
     "node": ">= 10"
