--- a/oxide/crates/node/npm/linux-x64-gnu/package.json
+++ b/oxide/crates/node/npm/linux-x64-gnu/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@tailwindcss/oxide-linux-x64-gnu",
   "version": "4.0.0-alpha.6",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tailwindlabs/tailwindcss.git",
+    "directory": "oxide/crates/node/npm/linux-x64-gnu"
+  },
   "os": [
     "linux"
   ],
@@ -11,6 +16,9 @@
   "files": [
     "tailwindcss-oxide.linux-x64-gnu.node"
   ],
+  "publishConfig": {
+    "provenance": true
+  },
   "license": "MIT",
   "engines": {
     "node": ">= 10"
